# kinect_v2_ros2_wrapper

./: CMakeLists.txt  README.md  package.xml
include/: kinect2_driver.hpp
resources/: camera_calibration.txt
src/: kinect2_driver.cpp  kinect_publisher.cpp
